--- a/development/terminalfour/src/sass/admissionsHomepage/responsive-overrides.scss
+++ b/development/terminalfour/src/sass/admissionsHomepage/responsive-overrides.scss
@@ -33,6 +33,22 @@
 	}
 
 	section.admissionsHomepageEAB {
+		.eab-header {
+			margin-top: 0px;
+		}
+
+		.eab-description {
+			width: 100%;
+		}
+
+		hr {
+			margin-bottom: 0.5em;
+		}
+
+		.eab-list {
+			padding-top: 0px;
+		}
+
 		.eab-form {
 			.custom-select {
 				width: 60%;
@@ -80,6 +96,28 @@
 	section.admissionsHomepagePanels {
 		.panel-sizing {
 			height: 67.535vw;
+		}
+	}
+
+	section.admissionsHomepageEAB {
+		.eab-header {
+			margin-top: 22px;
+		}
+
+
+		.eab-list {
+			padding-top: 15px;
+		}
+
+		.eab-form {
+			.custom-select {
+				width: 100%;
+				margin-right: 0px;
+				margin-bottom: 20px;
+			}
+			.eab-cta {
+				width: 100%;
+			}
 		}
 	}
 }
