--- a/development/terminalfour/src/sass/admissionsHomepage/responsive-overrides.scss
+++ b/development/terminalfour/src/sass/admissionsHomepage/responsive-overrides.scss
@@ -33,6 +33,8 @@
 	}
 
 	section.admissionsHomepageEAB {
+		padding-bottom: 50px;
+		
 		.eab-header {
 			margin-top: 0px;
 		}
@@ -100,10 +102,15 @@
 	}
 
 	section.admissionsHomepageEAB {
-		.eab-header {
-			margin-top: 22px;
+		.eab-sizing {
+			height: 67.535vw;
+			border-right: none;
 		}
 
+		.eab-header {
+			margin-top: 22px;
+			font-size: 24px;
+		}
 
 		.eab-list {
 			padding-top: 15px;
