adds additional styles to resources section. adds main-style.css compiled file.

--- a/development/terminalfour/src/html/includes/admissionsHomepageIncludes/admissionsHomepageResources.html
+++ b/development/terminalfour/src/html/includes/admissionsHomepageIncludes/admissionsHomepageResources.html
@@ -1,7 +1,51 @@
 <section class="admissionsHomepageResources">
 	<div class="container">
 		<div class="row">
-			<h2 class="center-text">hello world!</h2>
+			<h2 class="fancy"><span>Resources</span></h2>
 		</div>
 	</div>
+
+	<div class="resources-container">
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12 col-sm-6 col-md-4">
+					<a href="" class="resources-link"><p>Academic Programs</p></a>
+				</div>
+				<div class="col-xs-12 col-sm-6 col-md-4">
+					<a href="" class="resources-link"><p>Visit Us</p></a>
+				</div>
+				<div class="col-xs-12 col-sm-6 col-md-4">
+					<a href="" class="resources-link"><p>Admissions Requirements</p></a>
+				</div>
+				<div class="col-xs-12 col-sm-6 col-md-4">
+					<a href="" class="resources-link"><p>Cost</p></a>
+				</div>
+				<div class="col-xs-12 col-sm-6 col-md-4">
+					<a href="" class="resources-link"><p>Meet an Admissions Counselor</p></a>
+				</div>
+				<div class="col-xs-12 col-sm-6 col-md-4">
+					<a href="" class="resources-link"><p>Residency</p></a>
+				</div>
+				<div class="col-xs-12 col-sm-6 col-md-4">
+					<a href="" class="resources-link"><p>Campus Life</p></a>
+				</div>
+				<div class="col-xs-12 col-sm-6 col-md-4">
+					<a href="" class="resources-link"><p>Request Information</p></a>
+				</div>
+				<div class="col-xs-12 col-sm-6 col-md-4">
+					<a href="" class="resources-link"><p>Admissions Forms</p></a>
+				</div>
+				<div class="col-xs-12 col-sm-6 col-md-4">
+					<a href="" class="resources-link"><p>Parents</p></a>
+				</div>
+				<div class="col-xs-12 col-sm-6 col-md-4">
+					<a href="" class="resources-link"><p>High School / Community College Counselors</p></a>
+				</div>
+				<div class="col-xs-12 col-sm-6 col-md-4">
+					<a href="" class="resources-link"><p>Contact Us</p></a>
+				</div>
+			</div>
+		</div>
+	</div>
+
 </section>
