adds quick width refinements to h2.header element in homepage-eab.scss. adds repsonsive override to p elements for resources section in mobile breakpoints

--- a/development/terminalfour/src/sass/admissionsHomepage/responsive-overrides.scss
+++ b/development/terminalfour/src/sass/admissionsHomepage/responsive-overrides.scss
@@ -34,7 +34,7 @@
 
 	section.admissionsHomepageEAB {
 		padding-bottom: 50px;
-		
+
 		.eab-header {
 			margin-top: 0px;
 		}
@@ -58,6 +58,17 @@
 			}
 			.eab-cta {
 				width: 36%;
+			}
+		}
+	}
+
+	section.admissionsHomepageResources {
+		.resources-container {
+			.resources-link {
+				p {
+					margin: 0 auto;
+					width: 80%;
+				}
 			}
 		}
 	}
