adds inline padding styles for header container in admissionsHomepageResources.html. adds padding styles in homepage-resources.scss.

--- a/development/terminalfour/src/html/includes/admissionsHomepageIncludes/admissionsHomepageResources.html
+++ b/development/terminalfour/src/html/includes/admissionsHomepageIncludes/admissionsHomepageResources.html
@@ -1,5 +1,5 @@
 <section class="admissionsHomepageResources">
-	<div class="container">
+	<div class="container" style="padding-bottom: 10px;">
 		<div class="row">
 			<h2 class="fancy"><span>Resources</span></h2>
 		</div>
