--- a/development/terminalfour/src/sass/admissionsHomepage/homepage-resources.scss
+++ b/development/terminalfour/src/sass/admissionsHomepage/homepage-resources.scss
@@ -28,6 +28,7 @@ section.admissionsHomepageResources {
 	.resources-container {
 		background: #3a3a3a;
 		border-top: 15px solid $msu-red;
+		padding-bottom: 20px;
 		.resources-link {
 			color: white; 
 			font-size: 16px;
