--- a/www-root/style-assets/css/main-style.css
+++ b/www-root/style-assets/css/main-style.css
@@ -11514,71 +11514,59 @@ h4 {
 }
 
 /** Admissions Homepage **/
-.hero-cta {
+.admissionsHomepage button {
+  border-width: 5px;
   font-family: "Gotham A", "Gotham B", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #fff;
+  font-weight: 700;
   border-radius: 0px;
+  text-align: center;
+  font-size: 1rem;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  width: 100%;
+}
+.admissionsHomepage .hero-cta {
+  color: #fff;
   margin-top: 50px;
   margin-bottom: 5px;
-  border-width: 5px;
   border-color: #fff;
   background: rgba(255, 255, 255, 0.15);
-  letter-spacing: 1px;
-  font-size: 1rem;
-  font-weight: 700;
-  text-transform: uppercase;
   min-width: 235px;
   max-width: 350px;
-  width: 100%;
   height: 66px;
-  text-align: center;
 }
-
-.application-cta {
+.admissionsHomepage .hero-cta:hover {
+  color: #333;
+  background-color: #e6e6e6;
+  border-color: #adadad;
+  transition: all 0.2s ease;
+}
+.admissionsHomepage .application-cta {
   margin-top: 20px;
-  font-family: "Gotham A", "Gotham B", "Helvetica Neue", Helvetica, Arial, sans-serif;
   border-color: #00447c;
-  border-width: 5px;
   background: rgba(0, 0, 0, 0);
   color: #00447c;
-  border-radius: 0px;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  font-size: 1rem;
-  font-weight: 700;
-  text-align: center;
-  width: 100%;
+  transition: all 0.2s ease;
 }
-
-.application-cta:hover {
+.admissionsHomepage .application-cta:hover {
   color: #fff;
   background: rgba(0, 68, 124, 0.75);
   border-color: #00447c;
 }
-
-.panel-cta {
+.admissionsHomepage .panel-cta {
   margin-top: 20px;
   padding: 15px 16px;
-  font-family: "Gotham A", "Gotham B", "Helvetica Neue", Helvetica, Arial, sans-serif;
   background: rgba(0, 68, 124, 0.8);
   color: #ffffff;
-  border-radius: 0px;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  font-size: 1rem;
-  font-weight: 700;
-  text-align: center;
-  width: 100%;
   max-width: 290px;
   position: relative;
   top: 60%;
 }
-.panel-cta span {
+.admissionsHomepage .panel-cta span {
   position: relative;
   z-index: 1;
 }
-
-.eab-cta {
+.admissionsHomepage .eab-cta {
   padding: 15px 7px;
   font-family: "Gotham A", "Gotham B", "Helvetica Neue", Helvetica, Arial, sans-serif;
   border-color: #e2e2e2;
@@ -11586,7 +11574,6 @@ h4 {
   background: #cccccc;
   color: #e2e2e2;
   border-radius: 0px;
-  text-transform: uppercase;
   letter-spacing: 1px;
   font-size: 1rem;
   font-weight: 700;
@@ -11594,7 +11581,7 @@ h4 {
   pointer-events: none;
   transition: all 0.25s ease;
 }
-.eab-cta:hover {
+.admissionsHomepage .eab-cta:hover {
   color: #fff !important;
   background: rgba(0, 68, 124, 0.75) !important;
   border-color: #00447c !important;
