--- a/development/terminalfour/src/sass/admissionsHomepage/responsive-overrides.scss
+++ b/development/terminalfour/src/sass/admissionsHomepage/responsive-overrides.scss
@@ -140,10 +140,11 @@
 	}
 }
 
-@media only screen and (max-width: 767px) {
+/** specific breakpoint media query being used in Exceptional Case **/ 
+@media only screen and (max-width: 385px) {
 	section.admissionsHomepagePanels {
 		.overlay-content {
-			top: 5%;
+			top: 10%;
 		}
 	}
 }
